[package]

name          = "pool"
version       = "0.1.4"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "A pool of reusable values"
documentation = "https://carllerche.github.io/pool/pool"
homepage      = "https://github.com/carllerche/pool"
repository    = "https://github.com/carllerche/pool"
readme        = "README.md"
keywords      = ["pool"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[[test]]

name = "test"
path = "test/test.rs"
